fixed spacing between items s, m, l

--- a/src/components/calcite-stepper-item/calcite-stepper-item.scss
+++ b/src/components/calcite-stepper-item/calcite-stepper-item.scss
@@ -2,7 +2,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.1");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.3");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.4");
-  @apply text--1-wrap mr-2;
+  @apply text--1-wrap mr-1;
   .stepper-item-subtitle {
     @apply text--2-wrap;
   }
@@ -12,7 +12,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.2");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.4");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.5");
-  @apply text-0-wrap mr-3;
+  @apply text-0-wrap mr-2;
   .stepper-item-subtitle {
     @apply text--1-wrap;
   }
@@ -22,7 +22,7 @@
   --calcite-stepper-item-spacing-unit-s: theme("spacing.3");
   --calcite-stepper-item-spacing-unit-m: theme("spacing.5");
   --calcite-stepper-item-spacing-unit-l: theme("spacing.6");
-  @apply text-1-wrap mr-4;
+  @apply text-1-wrap mr-3;
   .stepper-item-subtitle {
     @apply text-0-wrap;
   }
@@ -266,7 +266,6 @@
     @apply mb-0
       ml-0
       pl-0;
-    // margin-top: var(--calcite-stepper-item-spacing-unit-m);
     padding-right: var(--calcite-stepper-item-spacing-unit-l);
   }
   & .stepper-item-header {
